<resources>
    <string name="app_name">pi_estagio</string>
    <string-array name="opcoes_perfil">
        <item>Quero procurar vagas</item>
        <item>Quero cadastrar vagas</item>
    </string-array>

    <!--    tela de login-->
    <string name="btn_entrar"> Entrar</string>
    <string name="btn_cadastrar"> Cadastrar</string>
    <string name="btn_recuperarSenha"> Recuperar Senha</string>

    <!--    tela de cadastro Usuario-->

    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="confirmarSenha">Confirmar Senha</string>
    <string name="interessado">INTERESSADO</string>
    <string name="anunciante">ANUNCIANTE</string>
    <string name="efetuarCadastro">Cadastrar</string>

    <!--    tela de cadastro vaga-->

    <string name="tituloCadastroVaga">Cadastre sua vaga</string>
    <string name="mensagemCadastroVaga">Preencha o formulário abaixo para cadastrar sua vaga na nossa plataforma</string>
    <string name="nomeEmpresa">Nome da sua empresa</string>
    <string name="tituloVaga">Cadastre o título da sua vaga</string>
    <string name="resumoVaga">Resumo</string>
    <string name="areaVaga">Área da vaga</string>
    <string name="localVaga">Local da vaga</string>
    <string name="remuneracaoVaga">Remuneração da vaga</string>
    <string name="telefoneContatoVaga">Telefone para contato</string>
    <string name="emailContato">Email para contato</string>
    <string name="dataFinalVaga">Data Final</string>
    <string name="cadastrarVaga">Cadastrar Vaga</string>

    <!--Informacoes card-->

    <string name="dadoTituloVaga">%1$s</string>
    <string name="dadoAreaConhecimentoVaga">%1$s</string>
    <string name="dadoResumoVaga">%1$s</string>
    <string name="dadoLocalidadeVaga">%1$s</string>
    <string name="dadoValorVaga">%1$s</string>

    <string name="PeriodoInscricao">PERÍODO DE INSCRIÇÂO</string>
    <string name="Contato">ENTRE EM CONTATO</string>

    <string name="dadoTelefoneVaga">%1$s</string>
    <string name="dadoEmailVaga">%1$s</string>
    <string name="dadoDataInicioVaga">%1$s</string>
    <string name="dadoDataTerminoVaga">%1$s</string>
    <string name="dadoNomeEmpresa">%1$s</string>


    <!--    Recuperação email  -->
    <string name="email">Email</string>
    <string name="msg_email">Escolha um email</string>
    <string name="enviar_email">Enviar Email</string>
    <string name="Voltar">Voltar</string>

    <!--Vaga resumida-->
    <string name="anuncianteVaga">Anunciante: %1$s</string>
    <string name="resumo">resumo: %1$s</string>
    <string name="area">Area: %1$s</string>
    <string name="remuneracao">Remuneração: %1$s</string>
    <string name="localidade">Localidade: %1$s</string>
    <string name="visualizar">Visualizar</string>
    <string name="deletarCard">Deletar</string>

    <!--    Perfil-->
    <string name="dadosPerfil">SUAS INFORMAÇÕES</string>
    <string name="nomePerfil">Nome: %1$s</string>
    <string name="emailPerfl">Email: %1$s</string>
    <string name="editarPerfil">Editar</string>
    <string name="sairPerfil">Sair</string>
    <string name="deletarPerfil">DELETAR CONTA</string>
    <string name="salvar">Salvar</string>

</resources>