<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:paddingTop="10dp"
    tools:context=".CadastroContaActivity">

    <!--logo da plataforma-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_cadastro"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/id_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Complete o formulário para fazer cadastro na nossa plataforma"
        android:paddingHorizontal="30dp"
        android:textAlignment="center"
        android:layout_below="@+id/img_logo"/>

    <!--texto do input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cad_nome_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_text"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/nome">

        <!--input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cad_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--texto do input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cad_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cad_nome_login"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/email"
        tools:ignore="NotSibling">

        <!--input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cad_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!--texto do input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cad_senha_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cad_email_login"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/senha"
        tools:ignore="NotSibling">

        <!--input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cad_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--texto do input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cad_conf_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cad_senha_login"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/confirmarSenha">

        <!--input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/cad_conf_senha"
        android:id="@+id/tipoInteressado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/interessado"/>

    <CheckBox
        android:id="@+id/tipoAnunciante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cad_conf_senha"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/tipoInteressado"
        android:text="@string/anunciante" />
    <!--input-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bntCadastrar"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tipoAnunciante"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/efetuarCadastro"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:rippleColor="#0072C6" />

    <!--botao cadastrar-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_voltar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/bntCadastrar"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Voltar"
        android:textColor="@color/primary_blue"
        android:textSize="20sp"
        app:backgroundTint="@color/background"
        app:cornerRadius="20dp"
        app:strokeColor="@color/primary_blue"
        app:strokeWidth="2dp" />

</RelativeLayout>
