<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8F8F8"
    android:paddingTop="100dp"
    tools:context=".RecuperarSenhaActivity">

    <!--logo da plataforma-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_login"
        android:layout_centerHorizontal="true"/>

    <!--texto do input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_recuperar_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/email">

        <!--input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recuperar_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--botao entrar-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enviar_email"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/ly_recuperar_senha"

        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/enviar_email"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_voltar_ti"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/btn_enviar_email"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Voltar"
        android:textColor="@color/primary_blue"
        android:textSize="20sp"
        app:backgroundTint="#fff"
        app:cornerRadius="20dp"
        app:strokeColor="@color/primary_blue"
        app:strokeWidth="2dp" />

</RelativeLayout>
