<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F8F8F8"
    android:paddingTop="100dp"
    tools:context=".MainActivity">

    <!--logo da plataforma-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        />

    <!--texto do input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Email">

        <!--input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!--texto do input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_login_email"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Senha">

        <!--input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!--botao entrar-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logar"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/ly_login_senha"

        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#0072C6"
        android:text="@string/btn_entrar"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--botao cadastrar-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cadastrar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/btn_logar"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_cadastrar"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:backgroundTint="#fff"
        app:cornerRadius="20dp"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_recuperarSenha"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/btn_cadastrar"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_recuperarSenha"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:backgroundTint="#fff"
        app:cornerRadius="20dp"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp" />



</RelativeLayout>
